# Halide

./: CMakePresets.json
.github/workflows/: packaging.yml
packaging/: CMakeLists.txt
packaging/ubuntu/: package.sh
src/: CodeGen_GPU_Host.cpp  PythonExtensionGen.cpp  Simplify_Stmts.cpp
src/runtime/: HalideBuffer.h  HalideRuntime.h  HalideRuntimeD3D12Compute.h  HalideRuntimeMetal.h
test/integration/: CMakeLists.txt
test/integration/jit-both/: CMakeLists.txt
